[tool.poetry]
name = "api-doc-gpt"
version = "0.1.0"
description = ""
authors = ["Ege Ucak <egeucak75@hotmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "api_doc_gpt"}]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.95.0"
openai = "^0.27.2"
requests = "^2.28.2"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
